Fix font loading