@@ -1,9 +1,11 @@
 package me.juniper.wave.graphic.text;
 
+import java.io.InputStream;
 import java.nio.ByteBuffer;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 
+import org.lwjgl.BufferUtils;
 import org.lwjgl.stb.STBTTFontinfo;
 import org.lwjgl.stb.STBTruetype;
 
@@ -13,7 +15,16 @@ public class Font {
     private ByteBuffer fontBuffer;
 
     public Font(String path) throws Exception {
-        fontBuffer = ByteBuffer.wrap(Files.readAllBytes(Paths.get(path)));
+        try (InputStream is = Font.class.getResourceAsStream(path)) {
+            if (is == null)
+                throw new RuntimeException("Font not found: " + path);
+
+            byte[] bytes = is.readAllBytes();
+
+            fontBuffer = BufferUtils.createByteBuffer(bytes.length);
+            fontBuffer.put(bytes).flip();
+        }
+
         fontInfo = STBTTFontinfo.create();
 
         if (!STBTruetype.stbtt_InitFont(fontInfo, fontBuffer))
